# hellobzlmod

./: .gitignore  BUILD.bazel  BUILD.googleapis  MODULE.bazel  Makefile  README.md  Taskfile.yml  WORKSPACE.bzlmod  deps.bzl  go.mod  go.sum
cmd/client/: BUILD.bazel  main.go
cmd/server/: BUILD.bazel  main.go
proto/abitofhelp/api/helloworld/v1/: BUILD.bazel  hello_world.proto
proto/google/api/: BUILD.bazel
