load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

##############################################################################
# Common
##############################################################################
proto_library(
    name = "annotations_proto",
    srcs = ["annotations.proto"],
    deps = [
        ":http_proto",
        "@com_google_protobuf//:descriptor_proto",
    ],
)

proto_library(
    name = "http_proto",
    srcs = ["http.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "httpbody_proto",
    srcs = ["httpbody.proto"],
    deps = ["@com_google_protobuf//:any_proto"],
)

##############################################################################
# Go
##############################################################################
#load("@com_google_googleapis_imports//:imports.bzl", "go_proto_library")
#load("@rules_proto//proto:defs.bzl", "proto_library")
#load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "annotations_go_proto",
    importpath = "google.golang.org/genproto/googleapis/api/annotations",
    protos = [
        ":annotations_proto",
        ":http_proto",
    ],
    #deps = [":api_go_proto"],
)

go_proto_library(
    name = "http_go_proto",
    importpath = "google.golang.org/genproto/googleapis/api/http",
    protos = [":http_proto"],
)

go_proto_library(
    name = "httpbody_go_proto",
    importpath = "google.golang.org/genproto/googleapis/api/httpbody",
    protos = [":httpbody_proto"],
)

#go_proto_library(
#    name = "api_go_proto",
#    importpath = "google.golang.org/genproto/googleapis/api",
#    protos = [],
#)
