load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "abitofhelp_api_helloworld_v1_proto",
    srcs = ["hello_world.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_googleapis//:api_proto",
        #"//google/api:api_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "abitofhelp_api_helloworld_v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/abitofhelp/hellobzlmod/proto/abitofhelp/api/helloworld/v1",
    proto = ":abitofhelp_api_helloworld_v1_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_googleapis//:annotations_go_proto",
        #"//google/api:annotations_proto",
    ],
)
#
#go_library(
#    name = "helloworld",
#    embed = [":abitofhelp_api_helloworld_v1_go_proto"],
#    importpath = "github.com/abitofhelp/hellobzlmod/proto/abitofhelp/api/helloworld/v1",
#    visibility = ["//visibility:public"],
#)
