load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
#load("@googleapis//:repository_rules.bzl", "switched_rules_by_language")

proto_library(
    name = "abitofhelp_api_helloworld_v1_proto",
    srcs = ["hello_world.proto"],
    visibility = ["//visibility:public"],
    deps = [
        #"//proto/google/api:api_proto",
        "//proto/google/api:annotations_proto",
        #        "//proto/google/api:annotations_proto",
        #        "//proto/google/api:http_proto",
        #        "//proto/google/api:httpbody_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

#go_proto_library(
#    name = "abitofhelp_api_helloworld_v1_go_proto",
#    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
#    importpath = "github.com/abitofhelp/hellobzlmod/proto/abitofhelp/api/helloworld/v1",
#    proto = ":abitofhelp_api_helloworld_v1_proto",
#    visibility = ["//visibility:public"],
#    deps = ["//proto/google/api:annotations_go_proto"],
#)
#
#go_library(
#    name = "helloworld",
#    embed = [":abitofhelp_api_helloworld_v1_go_proto"],
#    importpath = "github.com/abitofhelp/hellobzlmod/proto/abitofhelp/api/helloworld/v1",
#    visibility = ["//visibility:public"],
#)
